--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=3000
-#spring.datasource.url=jdbc:mysql://${MYSQLHOST:localhost}:3306/ShoesWeb
-#spring.datasource.username=root
-#spring.datasource.password=xxx
+spring.datasource.url=jdbc:mysql://${MYSQLHOST:localhost}:3306/maskawa
+spring.datasource.username=root
+spring.datasource.password=piyathida2562_
 #spring.datasource.url=jdbc:mysql://52.237.118.146:3306/ShoesWeb
 #spring.datasource.username=backend
 #spring.datasource.password=int221backend
@@ -27,12 +27,12 @@ hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #integrated.origin.host=http://localhost:8080,http://52.237.118.146
 #integrated.origin.method=GET, PUT, HEAD, POST, DELETE, OPTIONS
 
-hikari:
-# Minimum number of idle connections
-minimum-idle: 3  
-# The maximum number of connections in the connection pool, the default is 10
-maximum-pool-size: 10
-# This attribute controls the longest life cycle of the connection in the pool, the value 0 means infinite life cycle,
-#the default is 1800000, which is 30 minutes
-max-lifetime: 1800000  
+#hikari:
+## Minimum number of idle connections
+#minimum-idle: 3  
+## The maximum number of connections in the connection pool, the default is 10
+#maximum-pool-size: 10
+## This attribute controls the longest life cycle of the connection in the pool, the value 0 means infinite life cycle,
+##the default is 1800000, which is 30 minutes
+#max-lifetime: 1800000  
   
