--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.jpa.hibernate.naming.implicit-strategy=org.springframework.boot.orm.jpa.h
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
 # Enable multipart uploads
 #spring.servlet.multipart.enabled=true
 # Threshold after which files are written to disk.
