--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=3000
 spring.datasource.url=jdbc:mysql://${MYSQLHOST:localhost}:3306/maskawa
 spring.datasource.username=root
-spring.datasource.password=piyathida2562_
+spring.datasource.password=Songkran130444!
 #spring.datasource.url=jdbc:mysql://52.237.118.146:3306/ShoesWeb
 #spring.datasource.username=backend
 #spring.datasource.password=int221backend
