--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,25 +1,22 @@
-name: Java CI with Maven
+name: Maven CI/CD
 
 on:
-  push:
-    branches:
-      - master
-  pull_request:
-    branches:
-      - master
+ push:
+    branches: [ master ]
+ pull_request:
+    branches: [ master ]
 
 jobs:
-  build:
+  build_and_test:
 
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v1
       with:
-        java-version: '11'
-        distribution: 'adopt'
-        cache: maven
-    - name: Build with Maven
+        java-version: 12
+
+    - name: Build project with Maven
       run: mvn -B package --file pom.xml
