--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=3000
 spring.datasource.url=jdbc:mysql://${MYSQLHOST:localhost}:3306/maskawa
-spring.datasource.username=root
-spring.datasource.password=xxx
+spring.datasource.username=project
+spring.datasource.password=123456
 
 #spring.datasource.url=jdbc:mysql://52.237.118.146:3306/maskawa
 #spring.datasource.username=backend
@@ -13,17 +13,17 @@ hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 # Enable multipart uploads
-#spring.servlet.multipart.enabled=true
+spring.servlet.multipart.enabled=true
 # Threshold after which files are written to disk.
-#spring.servlet.multipart.file-size-threshold=2MB
+spring.servlet.multipart.file-size-threshold=2MB
 # Max file size.
-#spring.servlet.multipart.max-file-size=32MB
+spring.servlet.multipart.max-file-size=32MB
 # Max Request Size
-#spring.servlet.multipart.max-request-size=128MB
+spring.servlet.multipart.max-request-size=128MB
 ## File Storage Properties
 # All files uploaded through the REST API will be stored in this directory
 
-#integrated.storage.location=./public/product-images/
+integrated.storage.location=./public/product-images/
 #integrated.storage.location=/tmp/product-images
 
 #CORS Configulations
