--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 server.port=3000
-spring.datasource.url=jdbc:mysql://${MYSQLHOST:localhost}:3306/maskawa
-spring.datasource.username=project
-spring.datasource.password=123456
+#spring.datasource.url=jdbc:mysql://${MYSQLHOST:localhost}:3306/maskawa
+#spring.datasource.username=project
+#spring.datasource.password=123456
 
-#spring.datasource.url=jdbc:mysql://52.237.118.146:3306/maskawa
-#spring.datasource.username=backend
-#spring.datasource.password=int222backend
+spring.datasource.url=jdbc:mysql://13.67.90.93:3306/maskawa
+spring.datasource.username=backend
+spring.datasource.password=int222backend
+
 spring.jpa.hibernate.naming.implicit-strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
