--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     image: backend
     environment:
       - MYSQL_DATABASE=maskawa
-      - MYSQL_USER=backend
-      - MYSQL_ROOT_PASSWORD=int222backend
+      - MYSQL_USER=root
+      - MYSQL_ROOT_PASSWORD=Project222222
     volumes:
       - /home/Maskawa/Back-End/public:/tmp
     networks:
