--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ server.port=3000
 #spring.datasource.password=123456
 
 spring.datasource.url=jdbc:mysql://13.67.90.93:3306/maskawa
-spring.datasource.username=backend
-spring.datasource.password=int222backend
+spring.datasource.username=root
+spring.datasource.password=Project222222
 
 spring.jpa.hibernate.naming.implicit-strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
