--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -1,38 +1,41 @@
 server.port=3000
-#spring.datasource.url=jdbc:mysql://${MYSQLHOST:localhost}:3306/ShoesWeb
-#spring.datasource.username=root
-#spring.datasource.password=xxx
-#spring.datasource.url=jdbc:mysql://52.237.118.146:3306/ShoesWeb
-#spring.datasource.username=backend
-#spring.datasource.password=int221backend
+#spring.datasource.url=jdbc:mysql://${MYSQLHOST:localhost}:3306/maskawa
+#spring.datasource.username=project
+#spring.datasource.password=123456
+
+spring.datasource.url=jdbc:mysql://13.67.90.93:3306/maskawa
+spring.datasource.username=backend
+spring.datasource.password=int222backend
+
 spring.jpa.hibernate.naming.implicit-strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
 # Enable multipart uploads
-#spring.servlet.multipart.enabled=true
+spring.servlet.multipart.enabled=true
 # Threshold after which files are written to disk.
-#spring.servlet.multipart.file-size-threshold=2MB
+spring.servlet.multipart.file-size-threshold=2MB
 # Max file size.
-#spring.servlet.multipart.max-file-size=32MB
+spring.servlet.multipart.max-file-size=32MB
 # Max Request Size
-#spring.servlet.multipart.max-request-size=128MB
+spring.servlet.multipart.max-request-size=128MB
 ## File Storage Properties
 # All files uploaded through the REST API will be stored in this directory
 
 #integrated.storage.location=./public/product-images/
-#integrated.storage.location=/tmp/product-images
+integrated.storage.location= tmp/product-images
 
 #CORS Configulations
 #integrated.origin.host=http://localhost:8080,http://52.237.118.146
 #integrated.origin.method=GET, PUT, HEAD, POST, DELETE, OPTIONS
 
-hikari:
-# Minimum number of idle connections
-minimum-idle: 3  
-# The maximum number of connections in the connection pool, the default is 10
-maximum-pool-size: 10
-# This attribute controls the longest life cycle of the connection in the pool, the value 0 means infinite life cycle,
-#the default is 1800000, which is 30 minutes
-max-lifetime: 1800000  
-  
+#hikari:
+## Minimum number of idle connections
+#minimum-idle: 3  
+## The maximum number of connections in the connection pool, the default is 10
+#maximum-pool-size: 10
+## This attribute controls the longest life cycle of the connection in the pool, the value 0 means infinite life cycle,
+##the default is 1800000, which is 30 minutes
+#max-lifetime: 1800000  
