--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   backend:
-    container_name: backend
+    container_name: backend-con
     build: .
     image: backend
     environment:
