--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -19,5 +19,5 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ghcr.io/skeletonbear/back-end:master
+          tags: ghcr.io/int222-maskawa-catalog/back-end:latest
       
