--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -9,6 +9,10 @@ jobs:
     steps:
       - name: Ckeckout code
         uses: actions/checkout@v2
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+          cache: maven
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
@@ -20,4 +24,6 @@ jobs:
         with:
           push: true
           tags: ghcr.io/skeletonbear/back-end:latest
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
       
