--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,6 +25,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ghcr.io/skeletonbear/back-end:latest
+          tags: ghcr.io/skeletonbear/back-end:master
 
 
