CI [edit12] && docker-compose.ymal

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 services:
   backend:
     build: .
-    image: backend
+    image: backghcr.io/skeletonbear/back-end:latestend
     container_name: backend
     ports:
       - "3000:3000"
