--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 services:
   backend:
     build: .
-    image: backghcr.io/skeletonbear/back-end:latestend
+    image: ghcr.io/skeletonbear/back-end:latest
     container_name: backend
     ports:
       - "3000:3000"
