--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout code
-        uses: actions/checkout@main
+        uses: actions/checkout@master
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
@@ -19,4 +19,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ghcr.io/skeletonbear/back-end:latest
+          tags: ghcr.io/skeletonbear/back-end:master
