--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=3000
 #spring.datasource.url=jdbc:mysql://${MYSQLHOST:localhost}:3306/maskawa
 #spring.datasource.username=root
-#spring.datasource.password=piyathida2562_
+#spring.datasource.password=xxx
 
 spring.datasource.url=jdbc:mysql://13.67.90.93:3306/maskawa
 spring.datasource.username=backend
