--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 server.port=3000
-#spring.datasource.url=jdbc:mysql://${MYSQLHOST:localhost}:3306/maskawa
-#spring.datasource.username=root
-#spring.datasource.password=piyathida2562_
+spring.datasource.url=jdbc:mysql://${MYSQLHOST:localhost}:3306/maskawa
+spring.datasource.username=project
+spring.datasource.password=123456
 
-spring.datasource.url=jdbc:mysql://13.67.90.93:3306/maskawa
-spring.datasource.username=backend
-spring.datasource.password=int222backend
+#spring.datasource.url=jdbc:mysql://13.67.90.93:3306/maskawa
+#spring.datasource.username=backend
+#spring.datasource.password=int222backend
 
 spring.jpa.hibernate.naming.implicit-strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
@@ -24,8 +24,8 @@ spring.servlet.multipart.max-request-size=128MB
 ## File Storage Properties
 # All files uploaded through the REST API will be stored in this directory
 
-#integrated.storage.location=./public/product-images/
-integrated.storage.location= tmp/product-images
+integrated.storage.location=./public/product-images/
+#integrated.storage.location= tmp/product-images
 
 #CORS Configulations
 #integrated.origin.host=http://localhost:8080,http://52.237.118.146
