--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=3000
 
-spring.datasource.url=jdbc:mysql://${MYSQLHOST:localhost}:3306/maskawa
-spring.datasource.username=root
-spring.datasource.password=piyathida2562_
+#spring.datasource.url=jdbc:mysql://${MYSQLHOST:localhost}:3306/maskawa
+#spring.datasource.username=root
+#spring.datasource.password=piyathida2562_
 
 spring.datasource.url=jdbc:mysql://13.76.224.194:3306/maskawa
 spring.datasource.username=backend
