--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,8 +29,9 @@ spring.servlet.multipart.max-request-size=128MB
 integrated.storage.location= tmp/product-images
 
 #CORS Configulations
-#integrated.origin.host=http://localhost:8080,http://52.237.118.146
-#integrated.origin.method=GET, PUT, HEAD, POST, DELETE, OPTIONS
+integrated.origin.host=http://localhost:8080,https://maskawa.serveblog.net/backend
+integrated.origin.method=GET,PUT,HEAD,POST,DELETE,OPTIONS
+integrated.origin.header=Content-Type,Option,Authorization
 
 #hikari:
 ## Minimum number of idle connections
