--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,7 @@ spring.servlet.multipart.max-request-size=128MB
 # All files uploaded through the REST API will be stored in this directory
 
 #integrated.storage.location=./public/product-images/
-integrated.storage.location= tmp/product-images
+integrated.storage.location=tmp/product-images
 
 #CORS Configulations
 integrated.origin.host=http://localhost:8080,https://maskawa.serveblog.net/backend
