--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,7 +29,7 @@ spring.servlet.multipart.max-request-size=128MB
 integrated.storage.location=tmp/product-images
 
 #CORS Configulations
-integrated.origin.host=http://localhost:8080,https://maskawa.serveblog.net/backend
+integrated.origin.host=http://localhost:8080,https://maskawa.serveblog.net
 integrated.origin.method=GET,PUT,HEAD,POST,DELETE,OPTIONS
 integrated.origin.header=Content-Type,Option,Authorization
 
